# shimpz-store

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  shimpz.app.toml
app/: catalog.py  logconf.py  main.py
backend/: install.sh  pyproject.toml  requirements.in
backend/app/: access.py  assistant_releases.py  authn.py  concurrency.py  config.py  control.py  db.py  events.py  inference.py  logconf.py  main.py  middleware.py  model_catalog.json  models.py  oauth_broker.py  projections.py  register.py  reviews.py  team_driver_contract.py  upstream.py  ws.py
backend/app/chat/: events.py  relay.py  ws.py
backend/app/routers/: __init__.py  account.py  app_lifecycle.py  apps.py  assistants.py  brains.py  files.py  inference.py  static.py  teams.py
backend/tests/: conftest.py  test_assistant_release_feed.py  test_capsule_chat_boundary.py  test_chat_abort.py  test_chat_relay.py  test_chat_transport.py  test_cloud_assistants.py  test_control_plane.py  test_health.py  test_image_contract.py  test_oauth_broker.py  test_oauth_broker_routes.py  test_static_cache.py  test_team_chat_boundary.py
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: assistantInstallBridge.js  capsuleChat.js  catalog.ts  cloudAssistantLifecycle.js  i18n.ts  modelProviders.js  teamChat.js  url.ts
frontend/tests/: assistant-install-bridge.test.js  capsule-chat.test.js  cloud-assistant-lifecycle.test.js  legal-pages.test.js  model-providers.test.js  service-catalog.test.js  team-chat.test.js
shimpz/: SKILL.md
(+41 files in other folders)
