[project]
name = "shimpz-store-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "python-multipart==0.0.32",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "alembic",
    "structlog",
]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
